--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ body{
     document.getElementById('askQuestionButton').addEventListener('click', async () => {
       const question = prompt('Pertanyaan:');
       if (question) {
-        const response = await fetch('/get-response', {
+        const response = await fetch('/api/get-response', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
